# Backrest-Summary-Reporter

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml
docker-examples/: docker-compose-backrest.yaml  docker-compose-rclone.yaml  docker-compose-rsync-cron.yaml  docker-compose-source.yaml
rclone/: entrypoint.sh
rust-server/: Cargo.toml
rust-server/html/: error_snapshot.html  report_variabled.html  snapshot_status_row.html  snapshot_status_table.html  startup_email.html  storage_entry.html  success_snapshot.html  test_email.html  warn_snapshot.html
rust-server/src/: config.rs  db.rs  email.rs  handlers.rs  healthcheck.rs  html_report.rs  main.rs  models.rs  scheduler.rs  utils.rs
