[package]
name = "rust-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dependencies.lettre]
version = "0.11"
default-features = false
features = [
  "builder",            # enable Message::builder()
  "smtp-transport",     # enable AsyncSmtpTransport
  "tokio1",             # enable Tokio1Executor
  "tokio1-native-tls",  # glue Tokio1 + native-tls
]
